[tool.poetry]
name = "ride_hailing_demand_prediction_package"
version = "0.1.0"
description = "Package to evaluate different time series models to predict ride hailing demand."
authors = ["Martha <martha.e.braun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0.3"
numpy = ">=1.18,<1.22"
DateTime = "5.2"
seaborn = "^0.12.2"
statsmodels = "^0.13.0"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
plotly = "^5.16.1"
prophet = "^1.1.4"
darts = "0.19.0"
statsforecast = "0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
